update: add get user info
